--- a/adwaita.css
+++ b/adwaita.css
@@ -13,23 +13,52 @@ body {
   padding: 10px;
 }
 
+/* Dark mode */
+
+@media (prefers-color-scheme: dark) {
+   body {
+     background-color: #3A3A3A;
+     color: white;
+  }
+}
+
 /* LibAdwaita-like buttons */
 
-button {
+@media (prefers-color-scheme: light) {
+ button {
   padding: 15px;
   border: none;
   border-radius: 7.5px;
   background-color: #e6e6e6;
   transition: background-color 0.1s;
   font-family: cantarell;
-}
+ }
 
-button:hover {
+ button:hover {
   background-color: #b0b0b0;
-}
+ }
 
-button:active {
+ button:active {
   background-color: #828282;
+ }
+}
+@media (prefers-color-scheme: dark) {
+ button {
+  padding: 15px;
+  border: none;
+  border-radius: 7.5px;
+  background-color: #5B5B5B;
+  color: white;
+  transition: background-color 0.1s;
+  font-family: cantarell;
+ }
+ button:hover {
+  background-color: #3F3F3F;
+ }
+
+ button:active {
+  background-color: #2D2D2D;
+ }
 }
 
 /* LibAdwaita-like dialogues (only affects <dialog>, not JavaScript
