--- a/adwaita.css
+++ b/adwaita.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantarell&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono&display=swap');
 code, pre {
-  font-family: "Red Hat Mono";
+  font-family: monospace, "Red Hat Mono";
 }
 select {
   padding: 10px;
@@ -22,7 +22,7 @@ select {
 /* Apply font, padding, other HTML body patches */
 
 body {
-  font-family: cantarell;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", system-ui, sans-serif;
   padding: 10px;
   transition: background-color 0.5s,
               color 0.5s;
@@ -56,7 +56,7 @@ button {
   border: none;
   border-radius: 7.5px;
   background-color: #e6e6e6;
-  font-family: cantarell;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", system-ui, sans-serif;
  }
 
  button:hover {
@@ -74,7 +74,7 @@ button {
   border-radius: 7.5px;
   background-color: #5B5B5B;
   color: white;
-  font-family: cantarell;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", system-ui, sans-serif;
  }
  button:hover {
   background-color: #3F3F3F;
@@ -177,7 +177,7 @@ dialog {
 
 /* LibAdwaita-like keyboard buttons: Make kbd element look real */
 kbd {
-  font-family: cantarell;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", system-ui, sans-serif;
   background-color: #CCCCCC;
   border-radius: 5px;
   padding: 10px;
