--- a/adwaita.css
+++ b/adwaita.css
@@ -54,6 +54,8 @@ button {
 @media (prefers-color-scheme: light) {
  button {
   padding: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: none;
   border-radius: 7.5px;
   background-color: #e6e6e6;
@@ -71,6 +73,8 @@ button {
 @media (prefers-color-scheme: dark) {
  button {
   padding: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: none;
   border-radius: 7.5px;
   background-color: #5B5B5B;
@@ -112,6 +116,22 @@ dialog {
   -ms-user-select: none;
   user-select: none;
 }
+
+/* LibAdwaita like textinputs */
+
+input[type="text"] {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 8px 0;
+    font-size: 16px;
+    color: #333;
+}
+
+input[type="text"]:focus {
+    outline: none;
+    border-bottom-color: #66afe9;
+}
+
 
 /* Hide the browser's default checkbox */
 .container input {
@@ -181,7 +201,7 @@ kbd {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", system-ui, sans-serif;
   background-color: #CCCCCC;
   border-radius: 5px;
-  padding: 10px;
+  padding: 5px;
 }
 @media (prefers-color-scheme: dark) {
   kbd {
